# MPI_ThermalConductivity

./: CMakeLists.txt  config.data  gif_creator.py  main  table.data  table.txt
includes/: ConfigReader.h  MpiManager.h  MpiTable.h  config_reader.h  heatmap_creator.h
src/: MpiManager.cpp  MpiTable.cpp  main.cpp
